--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -15,14 +15,18 @@
   padding: 0;  
   box-sizing: border-box;  
 }  
-  
+ 
+
 body {  
   font-family: var(--font-family);  
   line-height: 1.6;  
   color: var(--text-color);  
   background-color: var(--background-color);  
 }  
-  
+title {  
+  text-align: center;  
+}
+
 body.dark-mode {  
   background-color: var(--dark-mode-background-color);  
   color: var(--dark-mode-text-color);  
@@ -54,10 +58,19 @@ header nav ul li a {
 /* Hero Section */  
 #hero {  
   background-color: var(--primary-color);  
-  color: white;  
+  color:  #2304ed;  
   text-align: center;  
-  padding: 50px 0;  
+  padding: 50px 0;
+  position: relative;    
 }  
+.hero-text {  
+  position: absolute;  
+  top: 50%;  
+  left: 50%;  
+  transform: translate(-50%, -50%);  
+  text-align: center;  
+}
+
   
 #hero img {  
   width: 100%;  
@@ -77,7 +90,11 @@ header nav ul li a {
   font-size: 1.2rem;  
   text-decoration: none;  
   border-radius: 5px;  
-  margin-top: 20px;  
+  position: absolute;  
+  bottom: 20px;  
+  left: 50%;  
+  transform: translateX(-50%);  
+  
 }  
   
 #hero .cta-button:hover {  
@@ -202,6 +219,15 @@ footer a {
   color: white; /* Make sure the footer links have high contrast */  
   font-weight: bold; /* Make the links more prominent */  
 }  
+.footer-image-logo {  
+  text-align: center;
+
+}
+.footer-image-logo img {  
+  width: 50px;  
+  height: 25px;  
+}
+
   
 /* Dark Mode */  
 body.dark-mode {  
