--- a/scoots/styles/style.css
+++ b/scoots/styles/style.css
@@ -312,7 +312,7 @@ main {
   }
  
   .contact-info {  
-    background-image: linear-gradient(to bottom, rgba(247, 249, 250, 0.5), rgba(80, 217, 248, 0.5), rgba(6, 136, 162, 0.5)),url("/scoots/images/hero2.webp");   
+    background-image: linear-gradient(to bottom, rgba(247, 249, 250, 0.5), rgba(80, 217, 248, 0.5), rgba(6, 136, 162, 0.5)),url("./images/hero2.webp");   
     background-size: cover;   
     background-position: center;  
     background-attachment: fixed; /* Add this line to fix the background image in place */  
@@ -337,7 +337,7 @@ main {
   } 
   .contact-header p {  
     font-size: 18px; 
-    color: white; 
+    color: rgb(5, 4, 4); 
   } 
   .contact-details-container {  
     display: flex;  
@@ -509,7 +509,7 @@ main {
 /* List Items Styling */
 .rental-choice ul li {
   font-size: 1.2em;
-  color: white;
+  color: rgb(6, 6, 6);
   position: relative;
   padding-left: 30px; /* Space for custom bullet */
   line-height: 1.6; /* More space between lines */
