--- a/scoots/styles/style.css
+++ b/scoots/styles/style.css
@@ -65,7 +65,7 @@ nav {
 }
  
 .hero {  
-  background-image: linear-gradient(to bottom, rgba(95, 229, 234, 0.5), rgba(178, 245, 160, 0.5), rgba(221, 171, 21, 0.5)),url("./images/hero.webp"), url("./images/hero.jpg");  
+  background-image: linear-gradient(to bottom, rgba(95, 229, 234, 0.5), rgba(178, 245, 160, 0.5), rgba(221, 171, 21, 0.5)),url("images/hero.webp");  
   background-size: cover;  
   background-position: center;  
   height: 100vh;  
@@ -161,7 +161,7 @@ nav {
 }
 /* Reservation Section (Rental Services & Terms) */
 .reservation-terms {  
-  background-image: linear-gradient(to bottom, rgba(243, 247, 247, 0.5), rgba(243, 247, 244, 0.5), rgba(247, 246, 243, 0.5)),url("/scoots/images/hero1.webp");   
+  background-image: linear-gradient(to bottom, rgba(243, 247, 247, 0.5), rgba(243, 247, 244, 0.5), rgba(247, 246, 243, 0.5)),url("../images/hero1.webp");   
   background-size: cover;   
   background-position: center;  
   padding: 40px;  
@@ -312,7 +312,7 @@ main {
   }
  
   .contact-info {  
-    background-image: linear-gradient(to bottom, rgba(247, 249, 250, 0.5), rgba(80, 217, 248, 0.5), rgba(6, 136, 162, 0.5)),url("./images/hero2.webp");   
+    background-image: linear-gradient(to bottom, rgba(247, 249, 250, 0.5), rgba(80, 217, 248, 0.5), rgba(6, 136, 162, 0.5)),url("../images/hero2.webp");   
     background-size: cover;   
     background-position: center;  
     background-attachment: fixed; /* Add this line to fix the background image in place */  
