--- a/scoots/styles/style.css
+++ b/scoots/styles/style.css
@@ -65,7 +65,7 @@ nav {
 }
  
 .hero {  
-  background-image: linear-gradient(to bottom, rgba(95, 229, 234, 0.5), rgba(178, 245, 160, 0.5), rgba(221, 171, 21, 0.5)),url("images/hero.webp");  
+  background-image: linear-gradient(to bottom, rgba(95, 229, 234, 0.5), rgba(178, 245, 160, 0.5), rgba(221, 171, 21, 0.5)),url("../images/hero.webp");  
   background-size: cover;  
   background-position: center;  
   height: 100vh;  
@@ -470,7 +470,7 @@ main {
 } 
   
 .rental-choice {
-  background-image: linear-gradient(to bottom, rgba(6, 246, 122, 0.947), rgba(8, 202, 245, 0.5), rgba(209, 246, 20, 0.5)),url("/scoots/images/hero3.webp");  
+  background-image: linear-gradient(to bottom, rgba(6, 246, 122, 0.947), rgba(8, 202, 245, 0.5), rgba(209, 246, 20, 0.5)),url("../images/hero3.webp");  
   background-size: cover;   
   background-position: center;  
   padding: 40px;  
